fix: adding some Null and thread safty part-1